--- a/downloads.html
+++ b/downloads.html
@@ -63,11 +63,12 @@
             <section id="downloads">
                 <h1>Downloads</h1>
                 <h2>Here you can dowload the latest versions for CocoaTabs (v0.1.2):</h2>
-                <p></p>
+                <p class="sep"></p>
                 <div style="margin-top: 40px; margin-bottom: 40px;">
-                    <a href="https://mega.nz/folder/QzkAQDqQ#qyp17SXBr9Dm-avmu5P2Rg"><button
+                    <a style="margin-bottom: 20px;" href="https://mega.nz/folder/QzkAQDqQ#qyp17SXBr9Dm-avmu5P2Rg"><button
                             style="margin-right: 40px;">For Windows</button></a>
-                    <a href="https://mega.nz/folder/p2MEnRTI#Gw-ORnToHTeGuk2HepsSGw"><button
+                            <p></p>
+                    <a style="margin-top: 20px;" class="dn-bt" href="https://mega.nz/folder/p2MEnRTI#Gw-ORnToHTeGuk2HepsSGw"><button
                             style="margin-right: 40px;">For MacOS & Linux</button></a>
                 </div>
 
@@ -85,6 +86,8 @@
                         <h5><a href="index.html" style="color: #b79dff;">Home</a> page</h5>
                         <p></p>
                         <h5><a href="documentation.html" style="color: #b79dff;">Documentation</a> page</h5>
+                        <p></p>
+                        <h5><a href="https://github.com/sad-gabi/CocoaTabs/blob/main/CHANGELOG.md" style="color: #b79dff;">Changelog</a></h5>
                     </div>
                     <div style="width: 50%;">
                         <h4>Contact</h4>
