--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                         <h5><a href="documentation.html" style="color: #b79dff;">Documentation</a> page</h5>
                         <p></p>
                         <h5><a href="downloads.html" style="color: #b79dff;">Downloads</a> page</h5>
+                        <p></p>
+                        <h5><a href="https://github.com/sad-gabi/CocoaTabs/blob/main/CHANGELOG.md" style="color: #b79dff;">Changelog</a></h5>
                     </div>
                     <div style="width: 50%;">
                         <h4>Contact</h4>
