--- a/downloads.html
+++ b/downloads.html
@@ -19,7 +19,7 @@
                 <h1>Home</h1>
             </div>
         </a>
-        <a style="width: -webkit-fill-available;" href="documentation.html">
+        <a style="width: -webkit-fill-available;" href="https://github.com/sad-gabi/CocoaTabs/wiki">
             <div class="option">
                 <h1>Documentation</h1>
             </div>
@@ -49,7 +49,7 @@
             </a>
 
             <a href="index.html" class="head-links">Home</a>
-            <a href="documentation.html" class="head-links">Documentation</a>
+            <a href="https://github.com/sad-gabi/CocoaTabs/wiki" class="head-links">Documentation</a>
 
         </div>
     </header>
@@ -85,7 +85,7 @@
                         <h4>CocoaTabs</h4>
                         <h5><a href="index.html" style="color: #b79dff;">Home</a> page</h5>
                         <p></p>
-                        <h5><a href="documentation.html" style="color: #b79dff;">Documentation</a> page</h5>
+                        <h5><a href="https://github.com/sad-gabi/CocoaTabs/wiki" style="color: #b79dff;">Documentation</a> page</h5>
                         <p></p>
                         <h5><a href="https://github.com/sad-gabi/CocoaTabs/blob/main/CHANGELOG.md" style="color: #b79dff;">Changelog</a></h5>
                     </div>
