--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Downloads</h1>
             </div>
         </a>
-        <a style="width: -webkit-fill-available;" href="documentation.html">
+        <a style="width: -webkit-fill-available;" href="https://github.com/sad-gabi/CocoaTabs/wiki">
             <div class="option">
                 <h1>Documentation</h1>
             </div>
@@ -47,7 +47,7 @@
                 <img style="padding-right: 10px; height: 30px;" src="images/github_logo.png" alt="Github logo">
             </a>
 
-            <a href="documentation.html" class="head-links">Documentation</a>
+            <a href="https://github.com/sad-gabi/CocoaTabs/wiki" class="head-links">Documentation</a>
             <a href="downloads.html" class="head-links">Downloads</a>
 
         </div>
@@ -101,7 +101,7 @@
                         <h4>Support Me!</h4>
                         <h5><a href="https://ko-fi.com/sadgabi" style="color: #b79dff;">sadgabi</a> at Ko-fi</h5>
                         <h4>CocoaTabs</h4>
-                        <h5><a href="documentation.html" style="color: #b79dff;">Documentation</a> page</h5>
+                        <h5><a href="https://github.com/sad-gabi/CocoaTabs/wiki" style="color: #b79dff;">Documentation</a> page</h5>
                         <p></p>
                         <h5><a href="downloads.html" style="color: #b79dff;">Downloads</a> page</h5>
                         <p></p>
