--- a/downloads.html
+++ b/downloads.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Download CocoaTabs: Python based grid clicker for Windows, MacOS & Linux">
     <link rel="stylesheet" href="styles/Mainstyle.css">
     <title>Downloads | CocoaTabs</title>
     <link rel="icon" href="images/icon.png" type="image/x-icon">
