--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </ul>
             </section>
 
-            <section id="end" style="background-color: #0e0e0e;">>
+            <section id="end" style="background-color: #0e0e0e;">
                 <div style="display: flex; margin-bottom: 40px;">
                     <div style="width: 50%;">
                         <h4>Support Me!</h4>
