--- a/downloads.html
+++ b/downloads.html
@@ -78,7 +78,7 @@
                 <h2><a href="https://mega.nz/folder/RzN2jZ4Z#NhDTVHC2wB_NBDvVtrdSRA" style="color: #b79dff;">- v0.1.2</a></h2>
             </section>
 
-            <section id="end" style="background-color: #0e0e0e;">>
+            <section id="end" style="background-color: #0e0e0e;">
                 <div style="display: flex; margin-bottom: 40px;">
                     <div style="width: 50%;">
                         <h4>Support Me!</h4>
