--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
                 <div><img src="images/splash-1.png" alt="CocoaTabs splash image" style="width: 100%;"></div>
             </section>
 
+            <section style="background-color: #e93e2b;" id="advert">
+                <h1>Urgent: CPU Replacement Needed!</h1>
+                <h2>My journey just hit a bump- my CPU took damage due to overheating. I'm in a pinch and need your help to replace it ASAP. Your support means everything and will get me back to creating more solutions and art.</h2>
+                <p></p>
+                <h2>Chip in to get me back on track! Any amount helps :)</h2>
+                <p></p>
+                <a href="https://ko-fi.com/sadgabi">
+                    <div style="width: -webkit-fill-available; text-align: right;"><button style="background-color: transparent; border-color: #ffffff;">Support me now!</button></div>
+                </a>
+            </section>
+
             <section id="info">
                 <h1>What you need to know</h1>
                 <h2>CocoaTabs is a Python based software, so you will need to have it installed.</h2>
