--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h2>Chip in to get me back on track! Any amount helps :)</h2>
                 <p></p>
                 <a href="https://ko-fi.com/sadgabi">
-                    <div style="width: -webkit-fill-available; text-align: right;"><button style="background-color: transparent; border-color: #ffffff;">Support me now!</button></div>
+                    <div style="width: -webkit-fill-available; text-align: right;"><button style="background-color: transparent; border-color: #ffffff; border-style: solid;">Support me now!</button></div>
                 </a>
             </section>
 
