--- a/downloads.html
+++ b/downloads.html
@@ -61,6 +61,17 @@
                 <div><img src="images/header.png" alt="CocoaTabs header" style="width: 100%;"></div>
             </section>
 
+            <section style="background-color: #e93e2b;" id="advert">
+                <h1>Urgent: CPU Replacement Needed!</h1>
+                <h2>My journey just hit a bump- my CPU took damage due to overheating. I'm in a pinch and need your help to replace it ASAP. Your support means everything and will get me back to creating more solutions and art.</h2>
+                <p></p>
+                <h2>Chip in to get me back on track! Any amount helps :)</h2>
+                <p></p>
+                <a href="https://ko-fi.com/sadgabi">
+                    <div style="width: -webkit-fill-available; text-align: right;"><button style="background-color: transparent; border-color: #ffffff; border-style: solid;">Support me now!</button></div>
+                </a>
+            </section>
+
             <section id="downloads">
                 <h1>Downloads</h1>
                 <h2>Here you can dowload the latest versions for CocoaTabs (v0.1.2):</h2>
