--- a/downloads.html
+++ b/downloads.html
@@ -74,18 +74,19 @@
 
             <section id="downloads">
                 <h1>Downloads</h1>
-                <h2>Here you can dowload the latest versions for CocoaTabs (v0.1.2):</h2>
+                <h2>Here you can dowload the latest versions for CocoaTabs (v0.1.3):</h2>
                 <p class="sep"></p>
                 <div style="margin-top: 40px; margin-bottom: 40px;">
-                    <a style="margin-bottom: 20px;" href="https://mega.nz/folder/QzkAQDqQ#qyp17SXBr9Dm-avmu5P2Rg"><button
+                    <a style="margin-bottom: 20px;" href="https://mega.nz/folder/t2cDyJpb#YJQAQQpwpRHe0dnkHNsCfg"><button
                             style="margin-right: 40px;">For Windows</button></a>
                             <p></p>
-                    <a style="margin-top: 20px;" class="dn-bt" href="https://mega.nz/folder/p2MEnRTI#Gw-ORnToHTeGuk2HepsSGw"><button
+                    <a style="margin-top: 20px;" class="dn-bt" href="https://mega.nz/folder/96F0BTrY#GgOQwmZXiR21mrhTPfWSLA"><button
                             style="margin-right: 40px;">For MacOS & Linux</button></a>
                 </div>
 
                 <h4>Other CocoaTabs versions:</h4>
 
+                <h2><a href="https://mega.nz/folder/MnlxiSya#O1MjVRE1Jeci2HZ10E1lGw" style="color: #b79dff;">- v0.1.2</a></h2>
                 <h2><a href="https://mega.nz/folder/RzN2jZ4Z#NhDTVHC2wB_NBDvVtrdSRA" style="color: #b79dff;">- v0.1.2</a></h2>
             </section>
 
