--- a/index.html
+++ b/index.html
@@ -100,10 +100,14 @@
                 <h2>To download CocoaTabs, <a href="downloads.html" style="color: #b79dff;">click here.</a></h2>
                 <h3>Dependencies</h3>
                 <p></p>
-                <h2>During the installation process, the following libraries will be installed:</h2>
+                <h2>During the installation process, the following Python libraries will be installed:</h2>
                 <ul>
                     <li style="margin-bottom: 10px;">Tkinter</li>
-                    <li>PyAutoGUI</li>
+                    <li style="margin-bottom: 10px;">PyAutoGUI</li>
+                    <li style="margin-bottom: 10px;">Requests</li>
+                    <li style="margin-bottom: 10px;">WebBrowser</li>
+                    <li style="margin-bottom: 10px;">Keyboard</li>
+                    <li>Platform</li>
                 </ul>
             </section>
 
