--- a/downloads.html
+++ b/downloads.html
@@ -77,10 +77,10 @@
                 <h2>Here you can dowload the latest versions for CocoaTabs (v0.1.3):</h2>
                 <p class="sep"></p>
                 <div style="margin-top: 40px; margin-bottom: 40px;">
-                    <a style="margin-bottom: 20px;" href="https://mega.nz/folder/t2cDyJpb#YJQAQQpwpRHe0dnkHNsCfg"><button
+                    <a style="margin-bottom: 20px;" href="https://mega.nz/folder/96F0BTrY#GgOQwmZXiR21mrhTPfWSLA"><button
                             style="margin-right: 40px;">For Windows</button></a>
                             <p></p>
-                    <a style="margin-top: 20px;" class="dn-bt" href="https://mega.nz/folder/96F0BTrY#GgOQwmZXiR21mrhTPfWSLA"><button
+                    <a style="margin-top: 20px;" class="dn-bt" href="https://mega.nz/folder/t2cDyJpb#YJQAQQpwpRHe0dnkHNsCfg"><button
                             style="margin-right: 40px;">For MacOS & Linux</button></a>
                 </div>
 
