--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
             </section>
 
             <section style="background-color: #e93e2b;" id="advert">
-                <h1>Urgent: CPU Replacement Needed!</h1>
-                <h2>My journey just hit a bump- my CPU took damage due to overheating. I'm in a pinch and need your help to replace it ASAP. Your support means everything and will get me back to creating more solutions and art.</h2>
+                <button style="background-color: transparent; padding: 10px">x</button>
+                <h1 style="font-size: 18px">Urgent: CPU Replacement Needed!</h1>
+                <h2 style="font-size: 14px">My journey just hit a bump- my CPU took damage due to overheating. I'm in a pinch and need your help to replace it ASAP. Your support means everything and will get me back to creating more solutions and art.</h2>
                 <p></p>
-                <h2>Chip in to get me back on track! Any amount helps :)</h2>
+                <h2 style="font-size: 14px">Chip in to get me back on track! Any amount helps :)</h2>
                 <p></p>
                 <a href="https://ko-fi.com/sadgabi">
                     <div style="width: -webkit-fill-available; text-align: right;"><button style="background-color: transparent; border-color: #ffffff; border-style: solid;">Support me now!</button></div>
